[ADD] submodule JayVora-SerpentCS/DOST

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = JayVora-SerpentCS/SerpentCS_Contributions
 	url = git@github.com:JayVora-SerpentCS/SerpentCS_Contributions.git
 	branch = 12.0
+
+[submodule "JayVora-SerpentCS/DOST"]
+	path = JayVora-SerpentCS/DOST
+	url = git@github.com:JayVora-SerpentCS/DOST.git
+	branch = 12.0
