--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,8 @@
 	path = JayVora-SerpentCS/Community_Portal
 	url = git@github.com:JayVora-SerpentCS/Community_Portal.git
 	branch = 12.0
+
+[submodule "gityopie/odoo-addons"]
+	path = gityopie/odoo-addons
+	url = git@github.com:gityopie/odoo-addons.git
+	branch = 9.0
