--- a/.gitmodules
+++ b/.gitmodules
@@ -27,3 +27,8 @@
 	path = gityopie/99
 	url = git@github.com:gityopie/odoo-addons.git
 	branch = 12.0
+
+[submodule "OCA/product-attribute"]
+	path = OCA/product-attribute
+	url = git@github.com:OCA/product-attribute.git
+	branch = 12.0
