[ADD] submodule OCA/product-attribute1

--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,8 @@
 	path = OCA/product-attribute
 	url = git@github.com:OCA/product-attribute.git
 	branch = 12.0
+
+[submodule "OCA/product-attribute1"]
+	path = OCA/product-attribute1
+	url = git@github.com:OCA/product-attribute.git
+	branch = 12.0
