--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,8 @@
 	path = OCA/website
 	url = git@github.com:OCA/website.git
 	branch = 12.0
+
+[submodule "rlfss/plan"]
+	path = rlfss/plan
+	url = git@github.com:rlfss/plan.git
+	branch = asa
